--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,11 +9,11 @@
 
 
 <h1>Hello <%= @user.name %> 
-<%= link_to "Sign In", "/auth/instagram" %>
-<%= link_to "Sign Out", signout_path %>
+
 </h1>
 <% end %>
-
+<h3><%= link_to "Sign In", "/auth/instagram" %>
+<%= link_to "Sign Out", signout_path %></h3>
 
 
 
@@ -21,9 +21,22 @@
 
 
   <div class="large-3 columns">
-      <label>this will be users timeline....
-<%= text_field_tag :query, params[:query] %>
-      </label>
+      <label>current users news feed...</label>
+ <div class="gram">
+<div>
+
+<% if @feed.present? %>
+
+<% @feed.each do |feed| %>
+
+<%= image_tag feed.images.standard_resolution.url, class: "picture" %>
+
+<% end %>
+<% end %>
+
+
+</div>
+</div>
 
       <div class ="gram">
 
@@ -46,10 +59,7 @@
 
 
 
-
-
-<!--    <div class="row">
- -->    <div class="large-3 columns">
+<div class="large-3 columns">
       <label>Search @username
 <%= text_field_tag :keyword, params[:keyword] %>
       </label>
@@ -57,8 +67,7 @@
 
    <% if @user_name2.present? %>
 
-<!--    <h1><%=@user_name_Name2%></h1>
- -->
+
 
 	<% @user_name2.each do |u| %>
 
@@ -71,13 +80,7 @@
     </div>
 
 
-
-
-
-
-
-<!--    <div class="row">
- -->    <div class="large-3 columns">
+    <div class="large-3 columns">
       <label>Search #hashtag
 <%= text_field_tag :hashword, params[:hashword] %>
       </label>
@@ -88,14 +91,31 @@
 
 <!--    <h1><#%= params[:hashword] %></h1>
  -->
-	<% @tags.each do |tags| %>
+  <% @tags.each do |tags| %>
 
-	<%= image_tag tags.images.standard_resolution.url, class: "picture" %>
+  <%= image_tag tags.images.standard_resolution.url, class: "picture" %>
 
-	<% end %>
-	<% end %>
+  <% end %>
+  <% end %>
 
 </div>
+
+
+</div>
+
+
+
+
+
+
+
+
+<!--    <div class="row">
+ -->    <div class="large-3 columns">
+
+ 
+
+    drag and drop photos here...
 
 
 </div>
@@ -106,21 +126,6 @@
 <!--    <div class="row">
  -->   
 
- <div class="large-3 columns gram">
-<div>
-
-<% if @feed.present? %>
-
-<% @feed.each do |feed| %>
-
-<%= image_tag feed.images.standard_resolution.url, class: "picture" %>
-
-<% end %>
-<% end %>
-
-
-</div>
-</div>
 
 
 <% end %>
