added the drag drop and stay feature to all three columns and minor styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,15 @@
 /* Add imports of custom sass/scss files here */
 
 
+.name {
+	float: left;
+	width: 500px;
+}
+.login {
+	float: right;
+	width: 300px;
+}
+
 .picture {
 	height: 300px;
 	width: 300px;
