--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,224 +1,125 @@
-<html>
-  <head>
-  <!-- everything in the head was pulled from the angular drag and drop example.. need to convert to layout.app view and remove bootstrap -->
-    <style>
-      .thumbnail { height: 280px !important; }
-      .btn-droppable { width: 180px; height: 30px; padding-left: 4px; }
-      .btn-draggable { width: 160px; }
-      .emage { height: 215px; }
-      h1 { padding: .2em; margin: 0; }
-      #products { height: 300px;
-  width: 300px;}
-      #cart { width: 200px; float: left; margin-top: 1em; }
-      #cart ol { margin: 0; padding: 1em 0 1em 3em; }
-    </style>
-  </head>
-
-
-
 <!-- CONTROLLER SCRIPT BELOW -->
 <script>
+  var App = angular.module('drag-and-drop', ['ngDragDrop']);
+  // this controller starts all lists as blank arrays which the feed is pushed into, and then list 4 is dragged into
+    App.controller('oneCtrl', function($scope, $timeout) {
+      $scope.list1 = [];
+      $scope.list2 = [];
+      $scope.list3 = [];
+      $scope.list4 = [];
+      $scope.targetPhoto = null;
+      //   this code was pulled from the example but i am not using it / have yet to use it
+      //   $scope.hideMe = function() {
+      //   return $scope.list4.length > 0;
+      // }
 
-// $(function() {
-//   $("#catalog").accordion();
-// });
+      // pushing in the urls to the list array as objects from the home controller.
+      <% @feedurls.each do |url| %>
+        $scope.list1.push({
+          'url': '<%= url %>'
+        })
+      <% end %>
 
+      <% @usearch.each do |url| %>
+        $scope.list2.push({
+          'url': '<%= url %>'
+        })
+      <% end %>
 
-var App = angular.module('drag-and-drop', ['ngDragDrop']);
-  
-  App.controller('oneCtrl', function($scope, $timeout) {
-    $scope.list1 = [];
-    $scope.list2 = [];
-    $scope.list3 = [];
-    $scope.list4 = [];
-    $scope.targetPhoto = null;
-
-    $scope.hideMe = function() {
-    return $scope.list4.length > 0;
-  }
-
-    // pushing in the urls to the list1 array as objects.
-    <% @feedurls.each do |url| %>
-      $scope.list1.push({
-        'url': '<%= url %>'
-      })
-    <% end %>
-
-    <% @usearch.each do |url| %>
-      $scope.list2.push({
-        'url': '<%= url %>'
-      })
-    <% end %>
-
-    <% @utags.each do |url| %>
-      $scope.list3.push({
-        'url': '<%= url %>'
-      })
-    <% end %>
-
-  
-  $scope.hello = function(id){
-    console.log(id.$id);
-    console.log('popped');
-    $scope.popped =  {
-      'position': 'absolute',
-      'z-index': '9999'
-    };
-  };  
-
-  $scope.bye = function(){
-    console.log('unpopped');
-    $scope.popped =  {
-      'position': 'relative',
-      'z-index': '9999'
-    };
-  };
-
-  $scope.selectPhoto = function(item) {
-    console.log(item.target.src);
-    $scope.targetPhoto = {url: item.target.src};
-  }
-
-  $scope.drop = function() {
-    $scope.list4.push($scope.targetPhoto);
-    $scope.targetPhoto = null;
-  }
-
-
-  $scope.save = function(){
-    console.log(this);
-  };
-
-
-  // Limit items to be dropped in list1
-  $scope.optionsList1 = {
-    accept: function(dragEl) {
-      if ($scope.list4.length >= 30) {
-        return false;
-      } else {
-        return true;
-      }
+      <% @utags.each do |url| %>
+        $scope.list3.push({
+          'url': '<%= url %>'
+        })
+      <% end %>
+      // the selectPhoto function gets the photo that is selected url from the item.target.src which is the url inside the dragged images info
+    $scope.selectPhoto = function(item) {
+      console.log(item.target.src);
+      $scope.targetPhoto = {url: item.target.src};
     }
-  };
-
-  // Limit items to be dropped in list1
-  $scope.optionsList1 = {
-    accept: function(dragEl) {
-      if ($scope.list1.length >= 2) {
-        return false;
-      } else {
-        return true;
-      }
+      // upon drop, this pushes the url into the list4 which then displays it, and then after it returns the target back to nil so i can do it again
+    $scope.drop = function() {
+      $scope.list4.push($scope.targetPhoto);
+      $scope.targetPhoto = null;
     }
-  };
-});
+  });
 </script>
 
-
-
-<!-- ACTUAL INDEX.HTML.ERB BELOW -->
+<!-- INDEX.HTML.ERB BELOW -->
 <body ng-app="drag-and-drop">
   <div ng-controller="oneCtrl">
-<!-- this is the button as well as sign in and sign out paths - do not want this in final verison and need to style NEED TO FIX THE FACT THAT BOTH SEARCH BOXS HAVE TO BE FULL IN ORDER TO SUBMIT-->
-    <%= form_tag root_path, :method => 'get' do %>  
+    <!-- this is the button as well as sign in and sign out paths - do not want this in final verison and need to style NEED TO FIX THE FACT THAT BOTH SEARCH BOXS HAVE TO BE FULL IN ORDER TO SUBMIT-->
+      <%= form_tag root_path, :method => 'get' do %>  
         <% if @user %> 
-        <h1 class ="name">Hello <%= @user.name %></h1>
-    <% end %>
-
+          <h1 class ="name">Hello <%= @user.name %></h1>
+        <% end %>
         <h3 class ="login">
-      <%= link_to "Sign In", "/auth/instagram" %>
-      <%= link_to "Sign Out", signout_path %>
-    </h3>
-
+          <%= link_to "Sign In", "/auth/instagram" %>
+          <%= link_to "Sign Out", signout_path %>
+        </h3>
         <header>
           <%= submit_tag "SEARCH INSTAGRAM USERS AND HASHTAGS", class:"button expand" %>
         </header>
-
-
-
-
-
-
-
-
-<!-- this feed is auto loaded when the user logs in and shows their own news feed / time line -->
-<div class="large-3 columns">
-  <label>current users news feed...</label>
-  <div class="gram">
-    <div>
-          <!-- {{list1}} will show the actual list detail if more info needed -->
-          <img
-          ng-repeat="item in list1"
-          ng-src="{{ item.url }}"
-          data-drag="true"
-          data-jqyoui-options="{revert: 'invalid', helper: 'clone'}"
-          jqyoui-draggable="{animate:true, onStart: 'selectPhoto'}" 
-          ng-model="list1"
-          />
-    </div>
-  </div>
-</div>
-<!-- this shows the search for users profiles. need to fix the fact that it will only show public profiles -->
-<div class="large-3 columns">
-    <label>Search @username
-      <%= text_field_tag :keyword, params[:keyword] %>
-    </label>
-    <div class="gram">
-          <img
-          ng-repeat="item in list2"
-          ng-src="{{ item.url }}"
-          data-drag="true"
-          data-jqyoui-options="{revert: 'invalid', helper: 'clone'}"
-          jqyoui-draggable="{animate:true, onStart: 'selectPhoto'}" 
-          ng-model="list2"/>
-      </div>
-</div>
-
-<!-- below shows the search for hashtags -->
-<div class="large-3 columns">
-  <label>Search #hashtag
-      <%= text_field_tag :hashword, params[:hashword] %>
-  </label>
-    <div class ="gram">
-          <img
-          ng-repeat="item in list3"
-          ng-src="{{ item.url }}"
-          data-drag="true"
-          data-jqyoui-options="{revert: 'invalid', helper: 'clone'}"
-          jqyoui-draggable="{animate:true, onStart: 'selectPhoto'}" 
-          ng-model="list3"/>
-    </div>
-</div>
-
-
-<!-- need to add the column to drag and drop and save photos here. -->
-  <div class="large-3 columns">
-  <label>Drop Images To Your Board</label>
-      <div id="cart">
-        <h4 class="ui-widget-header large-3 columns"></h4>
-        <div class="ui-widget-content gram" data-drop="true" ng-model='list4' jqyoui-droppable="{multiple:true, onDrop:'drop'}" >
-          
-                <img
-                ng-repeat="item in list4 track by $index"
-                ng-src="{{ item.url }}"
-                data-drag="true"
-                data-jqyoui-options="{revert: 'invalid', helper: 'clone'}"
-                jqyoui-draggable="{index: {{$index}}, animate:true}" 
-                ng-model="list4"/>
-                
-                <!-- {{list4}} shows the url info that is being passed over the the function-->
-            
+    <!-- this feed is auto loaded when the user logs in and shows their own news feed / time line -->
+    <div class="large-3 columns">
+      <label>current users news feed...</label>
+        <div class="gram">
+          <div>
+              <!-- put {{list1}} will show the actual list detail if more info needed -->
+              <img
+              ng-repeat="item in list1"
+              ng-src="{{ item.url }}"
+              data-drag="true"
+              data-jqyoui-options="{revert: 'invalid', helper: 'clone'}"
+              jqyoui-draggable="{animate:true, onStart: 'selectPhoto'}" 
+              ng-model="list1"
+              />
+          </div>
         </div>
-
     </div>
-
+    <!-- this shows the search for users profiles. need to fix the fact that it will only show public profiles -->
+    <div class="large-3 columns">
+        <label>Search @username <%= text_field_tag :keyword, params[:keyword] %> </label>
+          <div class="gram">
+              <img
+              ng-repeat="item in list2"
+              ng-src="{{ item.url }}"
+              data-drag="true"
+              data-jqyoui-options="{revert: 'invalid', helper: 'clone'}"
+              jqyoui-draggable="{animate:true, onStart: 'selectPhoto'}" 
+              ng-model="list2"/>
+          </div>
+    </div>
+    <!-- below shows the search for hashtags -->
+    <div class="large-3 columns">
+      <label>Search #hashtag <%= text_field_tag :hashword, params[:hashword] %> </label>
+        <div class ="gram">
+              <img
+              ng-repeat="item in list3"
+              ng-src="{{ item.url }}"
+              data-drag="true"
+              data-jqyoui-options="{revert: 'invalid', helper: 'clone'}"
+              jqyoui-draggable="{animate:true, onStart: 'selectPhoto'}" 
+              ng-model="list3"/>
+        </div>
+    </div>
+    <!-- below is where you will add the images to list4, which is the new coloumn of the saved photos -->
+    <div class="large-3 columns">
+      <label>Drop Images To Your Board</label>
+        <div id="cart">
+            <h4 class="ui-widget-header large-3 columns"></h4>
+              <div class="ui-widget-content gram" data-drop="true" ng-model='list4' jqyoui-droppable="{multiple:true, onDrop:'drop'}" >
+                    <img
+                    ng-repeat="item in list4 track by $index"
+                    ng-src="{{ item.url }}"
+                    data-drag="true"
+                    data-jqyoui-options="{revert: 'invalid', helper: 'clone'}"
+                    jqyoui-draggable="{index: {{$index}}, animate:true}" 
+                    ng-model="list4"/>
+                    <!-- {{list4}} shows the url info that is being passed over the the function-->
+              </div>
+        </div>
+    </div>
   </div>
-
-
-
-
-
-</div>
-</body>
-</html>
+<!-- this end is the for form for do loop at the start of the document.... might need to change this and make a form for each one that way you can search only one input at a time -->
 <% end %>
+</body>
