--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -1,4 +1,6 @@
-<h2>Welcome To Pinstagram!</h2> <br>
-<h3><%= link_to "Sign In", "/auth/instagram" %></h3>
+<body class="homepage">
 
-<h4>please style this page</h4>
+<div class="title">Pinstagram.</div> <br>
+<div class="signin"><%= link_to "Sign In", "/auth/instagram" %></div>
+	
+</body>
