--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,11 @@
  @import "foundation_and_overrides";
 /* Add imports of custom sass/scss files here */
 
+.board {
+	height: 300px;
+	width: 300px;
+}
+
 .homepage {
 	background-image: url('plane.png');
 	background-size: cover;
